[project]
name = "your_isaaclab_extension"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "torch",
  "torchvision",
  "isaacsim[all,extscache]==5.0.0",
  "isaaclab[all,isaacsim]>=2.2.0",
]
[build-system]
requires = ["setuptools", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
isaacsim = { index = "nvidia" }
isaaclab = { index = "nvidia" }

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com/"
explicit = true
